# meu-chatgpt

./: README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: .gitignore  __init__.py  config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  health.py
backend/app/core/: __init__.py
backend/app/db/: __init__.py
backend/app/db/repositories/: __init__.py
backend/app/models/: __init__.py  openai.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  error_handler.py  graph_manager.py  langgraph_service.py  message_converter.py  model_factory.py
backend/app/services/agents/: __init__.py
backend/app/services/audio/: __init__.py
backend/app/services/llm/: __init__.py
backend/app/services/memory/: __init__.py
backend/app/services/rag/: __init__.py
backend/app/utils/: __init__.py
backend/config/: __init__.py  development.yaml  production.yaml  test.yaml
backend/scripts/: server.py
backend/tests/: test_api.py  test_error_handler.py  test_health.py  test_model_factory.py
src/backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  test_api.py
src/backend/app/: config.py  db.py  db_indexes.py  main.py
src/backend/app/api/: __init__.py  (+2 more)
src/backend/docs/: frontend_contract.md  langgraph_patterns.md  mermaid_conversation_flow.md  mermaid_data_model.md
src/backend/migrations/: env.py
src/backend/tests/: conftest.py  test_api.py  test_conversation.py  test_message_converter.py
(+40 files in other folders)
